--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "react-mentions": "^4.4.10",
     "react-number-format": "^5.3.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "sass": "^1.69.5",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.5",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
