--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/x-date-pickers": "^6.18.0",
+    "@mui/x-tree-view": "^6.17.0",
     "@tanstack/react-query": "^5.4.3",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
