--- a/package.json
+++ b/package.json
@@ -11,36 +11,38 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/noto-sans-thai": "^5.0.8",
+    "@fontsource/noto-sans-thai": "^5.0.12",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.16",
-    "@mui/material": "^5.14.16",
-    "@mui/x-date-pickers": "^6.18.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@mui/x-date-pickers": "^6.18.4",
     "@mui/x-tree-view": "^6.17.0",
-    "@tanstack/react-query": "^5.4.3",
-    "axios": "^1.6.0",
+    "@tanstack/react-query": "^5.13.4",
+    "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "filesize": "^10.1.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
-    "next": "14.0.1",
+    "next": "14.0.4",
     "numeral": "^2.0.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-mentions": "^4.4.10",
     "react-number-format": "^5.3.1",
     "react-perfect-scrollbar": "^1.5.8",
     "sass": "^1.69.5",
-    "zustand": "^4.4.6"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.5",
-    "@types/lodash": "^4.14.200",
-    "@types/node": "^20",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.4",
     "@types/numeral": "^2.0.5",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5.3.3"
   }
 }
